# vsts

./: CMakeLists.txt  README.md
plugins/example/: CMakeLists.txt
plugins/example/source/: PluginProcessor.cpp
scripts/: setup.sh
